# MeeTube

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt  configure  innertube-api-research.md  simulator_env.sh
debian/: changelog  control  copyright  meetube.aegis  rules
docs/: INNERTUBE_API.md  YTDLP_STREAM_RESOLUTION.md
docs/superpowers/plans/: 2026-06-30-meetube-phase1-foundation.md  2026-07-02-account-ui.md  (+10 more)
resources/: resources.qrc
resources/packaging/: meetube_harmattan.desktop
resources/qml/: main.qml
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  curlnamfactory.cpp  curlnamfactory.h  main.cpp
src/app/harmattan/: eglvideoitem.cpp  eglvideoitem.h  maskeditem.cpp  maskeditem.h  maskeffect.cpp  maskeffect.h  perlinbackground.cpp  perlinbackground.h  qrimageprovider.cpp  qrimageprovider.h  screensaver.cpp  screensaver.h  shareui.cpp  shareui.h  videosurface.cpp  videosurface.h
src/app/media/: gstpipeline.cpp  gstpipeline.h  meegovideotexture.h  policyguard.cpp  policyguard.h  qtmpipeline.cpp  qtmpipeline.h
src/core/: CMakeLists.txt  chains.cpp  chains.h  http.cpp  job.h  status.h
src/core/core/: chains.cpp  chains.h  debuglog.cpp  debuglog.h  http.cpp  http.h
src/core/innertube/: accountapi.cpp  accountapi.h  accountdetails.cpp  accountdetails.h  accountmanager.cpp  accountmanager.h  accountstore.cpp  accountstore.h  catalog.h  channelapi.cpp  channelapi.h  channeldetails.cpp  channeldetails.h  clientconfig.cpp  clientconfig.h  contextbuilder.cpp  contextbuilder.h  innertube.cpp  innertube.h  playlistapi.cpp  playlistapi.h  searchsuggest.cpp  searchsuggest.h  settingsstore.cpp  settingsstore.h  streamset.cpp  streamset.h  streamurlbuilder.cpp  streamurlbuilder.h  subtitleset.cpp  subtitleset.h  videoapi.cpp  videoapi.h  videodetails.cpp  videodetails.h
src/core/jsc/: basejs.cpp  basejs.h  jsvm.cpp  jsvm.h  solver.cpp  solver.h
src/core/media/: bufferplanner.cpp  bufferplanner.h  bytesource.cpp  bytesource.h  fmp4demux.cpp  fmp4demux.h  hlssource.cpp  hlssource.h  ipipeline.cpp  ipipeline.h  ipolicy.cpp  ipolicy.h  medialog.cpp  medialog.h  mediapump.cpp  mediapump.h  playbackmode.h  streamfeed.cpp  streamfeed.h  streamplayer.cpp  streamplayer.h  streamproxy.cpp  streamproxy.h  subtitletrack.cpp  subtitletrack.h
src/core/models/: accountmodel.cpp  accountmodel.h  channelmodel.cpp  channelmodel.h  commentmodel.cpp  commentmodel.h  playlistmodel.cpp  playlistmodel.h  servicelistmodel.cpp  servicelistmodel.h  servicemetatypes.cpp  servicemetatypes.h  videomodel.cpp  videomodel.h
src/core/net/: curlengine.cpp  curlengine.h  curlnetworkaccessmanager.cpp  curlnetworkaccessmanager.h  curlnetworkreply.cpp  curlnetworkreply.h
src/core/parsers/: accountparser.cpp  channelparser.cpp  commentparser.cpp  continuation.h  playerparser.cpp  playerparser.h  playlistparser.cpp  rendererinternal.h  rendererparser.h  suggestparser.cpp  suggestparser.h  tokenscan.h  watchparser.cpp  ytjson.h
src/core/requests/: bodies.cpp  bodies.h
src/core/threading/: workerhost.h
src/core/types/: servicedatatypes.h
src/harmattan/: perlinbackground.cpp  qrimageprovider.cpp
src/innertube/: accountapi.cpp  accountapi.h  accountdetails.cpp  accountdetails.h  accountmanager.cpp  accountmanager.h  accountstore.cpp  accountstore.h  apiref.h  channelapi.cpp  channelapi.h  channeldetails.cpp  channeldetails.h  clientconfig.cpp  clientconfig.h  contextbuilder.cpp  contextbuilder.h  innertube.cpp  innertube.h  innertubeclient.cpp  innertubeclient.h  itransport.cpp  itransport.h  playlistapi.cpp  playlistapi.h  session.h  streamset.cpp  streamset.h  subtitleset.cpp  subtitleset.h  videoapi.cpp  videoapi.h  videodetails.cpp  videodetails.h
src/models/: accountmodel.cpp  accountmodel.h  categorymodel.cpp  categorymodel.h  channelmodel.cpp  channelmodel.h  commentmodel.cpp  commentmodel.h  playlistmodel.cpp  playlistmodel.h  servicelistmodel.cpp  servicelistmodel.h  servicemetatypes.cpp  servicemetatypes.h  streammodel.cpp  streammodel.h  subtitlemodel.cpp  subtitlemodel.h  usermodel.cpp  usermodel.h  videomodel.cpp  videomodel.h  watchmodel.cpp  watchmodel.h
src/parsers/: channelparser.cpp  continuation.cpp  continuation.h  jsonscan.h  jsonutil.h  playerparser.cpp  playerparser.h  rendererparser.cpp  rendererparser.h  videolistparser.cpp  watchparser.cpp  ytjson.h
src/requests/: accountrequest.cpp  accountrequest.h  actionrequest.cpp  actionrequest.h  bodies.h  categoryrequest.cpp  categoryrequest.h  commentrequest.cpp  commentrequest.h  playlistrequest.cpp  playlistrequest.h  servicerequest.cpp  servicerequest.h  streamsrequest.cpp  streamsrequest.h  subtitlesrequest.cpp  subtitlesrequest.h  userrequest.cpp  userrequest.h  videorequest.cpp  videorequest.h  watchrequest.cpp  watchrequest.h  ytcategoryrequest.cpp  ytcategoryrequest.h  ytcommentrequest.cpp  ytcommentrequest.h  ytstreamsrequest.cpp  ytstreamsrequest.h  ytvideorequest.cpp  ytvideorequest.h
src/threading/: workerhost.cpp  workerhost.h
src/types/: servicedatatypes.h
src/webp-imageformat/: qwebphandler.cpp  qwebpplugin.cpp
tests/: CMakeLists.txt  bench_json.cpp  parserpayloads.h  test_x_overlay.py  testutil.h  tst_meetube_account.cpp  tst_meetube_basejs.cpp  tst_meetube_chains.cpp  tst_meetube_client.cpp  tst_meetube_context.cpp  tst_meetube_curlnam.cpp  tst_meetube_jsvm.cpp  tst_meetube_media.cpp  tst_meetube_model.cpp  tst_meetube_parsers.cpp  tst_meetube_requests.cpp  tst_meetube_solver.cpp  tst_meetube_streamset.cpp  tst_meetube_streamurl.cpp  tst_meetube_threading.cpp
tests/fixtures/: accounts_list.json  base_js_sample.js  browse_feed.json  browse_playlists_lockup.json  channel_pageheader.json  comments_page.json  iframe_api_sample.js  next_for_comments.json  next_lockup.json  player_ios.json  player_streams.json  player_web_ciphered.json  search_videos.json  tiles_history.json  watch_next.json
tests/fuzz/: .gitignore  fuzz_fmp4.cpp  run.sh
tools/: make_soname_links.cmake
webp-imageformat/: CMakeLists.txt  qwebphandler.cpp  qwebphandler.h  qwebpplugin.h
(+48 files in other folders)
